--- a/app/templates/signedin.html
+++ b/app/templates/signedin.html
@@ -14,19 +14,14 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
-			<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="/scheduling">Sign Up and Scheduling</a></li>
-					</ul>
-				</nav>
+		
+					
 
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<h2>HENNA BLOOM!!</h2>
-						<p style="color:white">Bringing people to be more aware of the underdeveloped Henna art, 
+						<h2></h2>
+						<p>Bringing people to be more aware of the underdeveloped Henna art, 
 						<br />
 						and allowing it to flourish throughout the world. </p>
 					</div>
@@ -77,9 +72,9 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Queens</a></h3>
+															<h3><a href="#">Philadelphia</a></h3>
 															<p>
-															There will be a workshop in Queens, NY on Septmember 3rd, 2019. The location is still ot be determined.
+															There will be a workshop in Philadelphia, PA on Septmember 3rd, 2019. The location is still ot be determined.
 															</p>
 														</section>
 
@@ -89,9 +84,9 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">Bronx</a></h3>
+															<h3><a href="#">Chicago</a></h3>
 															<p>
-															There will be a workshop in Bronx, NY on Septmember 7th, 2019. The location is still ot be determined.
+															There will be a workshop in Chicago, IL on Septmember 7th, 2019. The location is still ot be determined.
 															</p>
 														</section>
 
@@ -100,9 +95,9 @@
 														
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">Manhatten</a></h3>
+															<h3><a href="#">Los Angeles</a></h3>
 															<p>
-															There will be a workshop in Manhatten, NY on Septmember 28th, 2019. The location is still ot be determined.
+															There will be a workshop in Los Angeles, CA on Septmember 28th, 2019. The location is still ot be determined.
 															</p>
 														</section>
                                                 <div class="col-3 col-6-medium col-12-small">
@@ -132,7 +127,7 @@
 																	<h3><a href="#">What problems surround Henna?</a></h3>
 																	<p></p>
 																	<ul class="meta">
-																		<li class="icon fa-clock">2 hours ago</li>
+																		<li class="icon fa-clock">15 minutes ago</li>
 																		<li class="icon fa-comments"><a href="#">8</a></li>
 																	</ul>
 																</header>
