--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -7,6 +7,65 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+* {
+  box-sizing: border-box;
+}
+
+#content {
+	color: black;
+}
+
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: orange;
+  color: black;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: black;
+}
+
+/* Style the container/contact section */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 10px;
+}
+
+/* Create two columns that float next to eachother */
+.column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -2209,6 +2268,7 @@ input, select, textarea {
 
 	.box.feature {
 		text-align: center;
+		margin: 0 0 0.5em 0;
 	}
 
 	.box.post header {
@@ -2502,6 +2562,7 @@ input, select, textarea {
 				color: #fff;
 				font-size: 2.75em;
 				margin: 0 0 0.5em 0;
+				color: white;
 			}
 
 			#banner .content p {
